Adicionando link para a lei de proteção de dados.

--- a/public/nyxtalk/instrucoes-exclusao-dados/index.html
+++ b/public/nyxtalk/instrucoes-exclusao-dados/index.html
@@ -61,11 +61,11 @@
 
       <h2>Solicitação de Exclusão de Dados</h2>
       <p>
-        A NyxTalk respeita seu direito à privacidade e ao controle de seus dados pessoais, em conformidade com a Lei Geral de Proteção de Dados Pessoais (LGPD) - Lei nº 13.709/2018. Esta página fornece instruções sobre como solicitar a exclusão de seus dados pessoais de nossos sistemas.
+        A NyxTalk respeita seu direito à privacidade e ao controle de seus dados pessoais, em conformidade com a <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">Lei Geral de Proteção de Dados Pessoais (LGPD) - Lei nº 13.709/2018</a>. Esta página fornece instruções sobre como solicitar a exclusão de seus dados pessoais de nossos sistemas.
       </p>
 
       <h2>Seus Direitos sob a LGPD</h2>
-      <p>De acordo com a LGPD, você, como titular dos dados, tem o direito de solicitar:</p>
+      <p>De acordo com a <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a>, você, como titular dos dados, tem o direito de solicitar:</p>
       <ul>
         <li>A eliminação dos dados pessoais tratados com seu consentimento</li>
         <li>A anonimização, bloqueio ou eliminação de dados desnecessários, excessivos ou tratados em desconformidade com a LGPD</li>
@@ -73,7 +73,7 @@
       </ul>
 
       <h2>Como Solicitar a Exclusão de Seus Dados</h2>
-      <p>Para exercer seu direito de eliminação de dados conforme estabelecido pela LGPD, siga as instruções abaixo:</p>
+      <p>Para exercer seu direito de eliminação de dados conforme estabelecido pela <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a>, siga as instruções abaixo:</p>
 
       <h3>1. Opções para Solicitar a Exclusão de Dados</h3>
       
@@ -97,7 +97,7 @@
 
       <h3>2. Verificação de Identidade</h3>
       <p>
-        Para proteger sua privacidade e segurança, e em conformidade com a LGPD, podemos solicitar documentos ou informações adicionais para verificar sua identidade antes de processar sua solicitação. Isto pode incluir:
+        Para proteger sua privacidade e segurança, e em conformidade com a <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a>, podemos solicitar documentos ou informações adicionais para verificar sua identidade antes de processar sua solicitação. Isto pode incluir:
       </p>
       <ul>
         <li>Confirmação por mensagem enviada ao seu número de WhatsApp registrado</li>
@@ -110,7 +110,7 @@
       <p>Após recebermos sua solicitação e confirmarmos sua identidade:</p>
       <ul>
         <li>Enviaremos uma confirmação do recebimento de sua solicitação</li>
-        <li>Processaremos sua solicitação dentro de 15 dias, conforme exigido pela LGPD</li>
+        <li>Processaremos sua solicitação dentro de 15 dias, conforme exigido pela <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a></li>
         <li>Enviaremos uma confirmação quando a exclusão estiver concluída</li>
       </ul>
 
@@ -135,7 +135,7 @@
 
       <h2>Retenção Limitada</h2>
       <p>
-        Conforme permitido pela LGPD, podemos reter certas informações, mesmo após sua solicitação de exclusão, nas seguintes circunstâncias:
+        Conforme permitido pela <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a>, podemos reter certas informações, mesmo após sua solicitação de exclusão, nas seguintes circunstâncias:
       </p>
       <ul>
         <li>Quando houver uma obrigação legal ou regulatória que exija a conservação dos dados</li>
@@ -143,7 +143,7 @@
         <li>Transferência a terceiro, respeitados os requisitos de tratamento de dados da LGPD</li>
         <li>Uso exclusivo do controlador, vedado seu acesso por terceiro, e desde que anonimizados os dados</li>
       </ul>
-      <p>Qualquer informação retida será mantida de acordo com nossa <a href="../politica-de-privacidade/">Política de Privacidade</a> e a LGPD.</p>
+      <p>Qualquer informação retida será mantida de acordo com nossa <a href="../politica-de-privacidade/">Política de Privacidade</a> e a <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a>.</p>
 
       <h2>Dados na Plataforma WhatsApp</h2>
       <p>
@@ -152,7 +152,7 @@
 
       <h2>Perguntas e Assistência</h2>
       <p>
-        Se você tiver dúvidas sobre o processo de exclusão de dados, seus direitos sob a LGPD, ou precisar de assistência adicional, entre em contato com nosso Encarregado de Proteção de Dados (DPO) em <strong><a href="mailto:admin@nyx.tc">admin@nyx.tc</a></strong>.
+        Se você tiver dúvidas sobre o processo de exclusão de dados, seus direitos sob a <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a>, ou precisar de assistência adicional, entre em contato com nosso Encarregado de Proteção de Dados (DPO) em <strong><a href="mailto:admin@nyx.tc">admin@nyx.tc</a></strong>.
       </p>
 
       <hr>
