--- a/public/nyxtalk/politica-de-privacidade/index.html
+++ b/public/nyxtalk/politica-de-privacidade/index.html
@@ -64,7 +64,7 @@
         Bem-vindo à Política de Privacidade do NyxTalk. Este documento explica como coletamos, usamos, armazenamos e protegemos suas informações pessoais ao utilizar nosso chatbot.
       </p>
       <p>
-        A NyxTalk ("nós", "nosso" ou "nos") está comprometida em proteger sua privacidade e seus dados pessoais. Esta política foi desenvolvida em conformidade com a Lei Geral de Proteção de Dados Pessoais (LGPD) - Lei nº 13.709/2018, e outras legislações aplicáveis. Recomendamos a leitura atenta desta política para entender nossas práticas em relação aos seus dados e como os trataremos.
+        A NyxTalk ("nós", "nosso" ou "nos") está comprometida em proteger sua privacidade e seus dados pessoais. Esta política foi desenvolvida em conformidade com a <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">Lei Geral de Proteção de Dados Pessoais (LGPD) - Lei nº 13.709/2018</a>, e outras legislações aplicáveis. Recomendamos a leitura atenta desta política para entender nossas práticas em relação aos seus dados e como os trataremos.
       </p>
 
       <h2>2. Informações que Coletamos</h2>
@@ -96,7 +96,7 @@
       </ul>
 
       <h2>3. Base Legal para o Tratamento de Dados</h2>
-      <p>De acordo com a LGPD, o tratamento de seus dados pessoais é realizado com base nas seguintes hipóteses legais:</p>
+      <p>De acordo com a <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a>, o tratamento de seus dados pessoais é realizado com base nas seguintes hipóteses legais:</p>
       <ul>
         <li>Mediante o seu consentimento específico e informado</li>
         <li>Para a execução de contrato ou de procedimentos preliminares</li>
@@ -151,11 +151,11 @@
         <li>Em caso de reorganização empresarial, fusão ou venda</li>
         <li>Meta Platforms, Inc. e WhatsApp Inc., na medida necessária para facilitar a comunicação através da plataforma WhatsApp</li>
       </ul>
-      <p>Não vendemos suas informações pessoais a terceiros. Qualquer compartilhamento de dados será realizado em conformidade com a LGPD e esta Política de Privacidade.</p>
+      <p>Não vendemos suas informações pessoais a terceiros. Qualquer compartilhamento de dados será realizado em conformidade com a <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a> e esta Política de Privacidade.</p>
 
       <h2>8. Transferência Internacional de Dados</h2>
       <p>
-        Caso seja necessário transferir seus dados para fora do Brasil, garantiremos que tal transferência ocorra apenas para países ou organismos internacionais que proporcionem grau de proteção de dados adequado, ou mediante a adoção de garantias e salvaguardas, conforme exigido pela LGPD.
+        Caso seja necessário transferir seus dados para fora do Brasil, garantiremos que tal transferência ocorra apenas para países ou organismos internacionais que proporcionem grau de proteção de dados adequado, ou mediante a adoção de garantias e salvaguardas, conforme exigido pela <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a>.
       </p>
       <p>
         Ao utilizar os serviços do WhatsApp Business API, alguns de seus dados podem ser processados em servidores internacionais operados pela Meta Platforms, Inc. Estes dados são tratados de acordo com as políticas de privacidade da Meta e as leis de proteção de dados aplicáveis.
@@ -163,11 +163,11 @@
 
       <h2>9. Segurança de Dados</h2>
       <p>
-        Implementamos medidas técnicas e organizacionais apropriadas para proteger suas informações pessoais contra acesso não autorizado, alteração, divulgação ou destruição, em conformidade com as exigências da LGPD. No entanto, nenhum método de transmissão pela internet ou método de armazenamento eletrônico é 100% seguro.
+        Implementamos medidas técnicas e organizacionais apropriadas para proteger suas informações pessoais contra acesso não autorizado, alteração, divulgação ou destruição, em conformidade com as exigências da <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a>. No entanto, nenhum método de transmissão pela internet ou método de armazenamento eletrônico é 100% seguro.
       </p>
 
       <h2>10. Seus Direitos como Titular de Dados</h2>
-      <p>De acordo com a LGPD, você possui os seguintes direitos em relação aos seus dados pessoais:</p>
+      <p>De acordo com a <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a>, você possui os seguintes direitos em relação aos seus dados pessoais:</p>
       <ul>
         <li>Confirmação da existência de tratamento de seus dados</li>
         <li>Acesso aos seus dados pessoais</li>
@@ -183,7 +183,7 @@
 
       <h2>11. Retenção de Dados</h2>
       <p>
-        Mantemos suas informações pessoais pelo tempo necessário para os fins estabelecidos nesta Política de Privacidade, a menos que um período de retenção mais longo seja exigido ou permitido por lei, em conformidade com os princípios da LGPD.
+        Mantemos suas informações pessoais pelo tempo necessário para os fins estabelecidos nesta Política de Privacidade, a menos que um período de retenção mais longo seja exigido ou permitido por lei, em conformidade com os princípios da <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a>.
       </p>
       <p>Para dados específicos do WhatsApp, seguimos as seguintes diretrizes de retenção:</p>
       <ul>
@@ -194,7 +194,7 @@
 
       <h2>12. Crianças e Adolescentes</h2>
       <p>
-        Nossos serviços não são direcionados a menores de 13 anos. Em conformidade com a LGPD e as políticas da Meta, o tratamento de dados pessoais de crianças e adolescentes será realizado em seu melhor interesse, mediante consentimento específico e em destaque dado por pelo menos um dos pais ou responsável legal, quando aplicável.
+        Nossos serviços não são direcionados a menores de 13 anos. Em conformidade com a <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a> e as políticas da Meta, o tratamento de dados pessoais de crianças e adolescentes será realizado em seu melhor interesse, mediante consentimento específico e em destaque dado por pelo menos um dos pais ou responsável legal, quando aplicável.
       </p>
       <p>
         De acordo com os termos do WhatsApp, usuários devem ter pelo menos 13 anos de idade para utilizar o serviço.
@@ -207,7 +207,7 @@
 
       <h2>14. Encarregado de Proteção de Dados (DPO)</h2>
       <p>
-        Para questões relacionadas especificamente à proteção de dados e à LGPD, você pode entrar em contato com nosso Encarregado de Proteção de Dados (DPO) através do email: <a href="mailto:admin@nyx.tc">admin@nyx.tc</a>
+        Para questões relacionadas especificamente à proteção de dados e à <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a>, você pode entrar em contato com nosso Encarregado de Proteção de Dados (DPO) através do email: <a href="mailto:admin@nyx.tc">admin@nyx.tc</a>
       </p>
 
       <h2>15. Canais de Atendimento</h2>
