--- a/public/nyxtalk/termos-de-servico/index.html
+++ b/public/nyxtalk/termos-de-servico/index.html
@@ -108,7 +108,7 @@
       <h2>5. Proteção de Dados e Privacidade</h2>
       <h3>5.1 Conformidade com a LGPD</h3>
       <p>
-        Nosso tratamento de dados pessoais está em conformidade com a Lei Geral de Proteção de Dados Pessoais (LGPD) - Lei nº 13.709/2018. Para informações detalhadas sobre como coletamos, utilizamos e protegemos seus dados pessoais, consulte nossa <a href="../politica-de-privacidade/">Política de Privacidade</a>.
+        Nosso tratamento de dados pessoais está em conformidade com a <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">Lei Geral de Proteção de Dados Pessoais (LGPD) - Lei nº 13.709/2018</a>. Para informações detalhadas sobre como coletamos, utilizamos e protegemos seus dados pessoais, consulte nossa <a href="../politica-de-privacidade/">Política de Privacidade</a>.
       </p>
 
       <h3>5.2 Dados do WhatsApp</h3>
@@ -122,12 +122,12 @@
 
       <h3>5.3 Consentimento</h3>
       <p>
-        Ao utilizar nosso Serviço, você consente com a coleta e o processamento de seus dados conforme descrito em nossa Política de Privacidade, respeitando os princípios e direitos estabelecidos pela LGPD.
+        Ao utilizar nosso Serviço, você consente com a coleta e o processamento de seus dados conforme descrito em nossa Política de Privacidade, respeitando os princípios e direitos estabelecidos pela <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a>.
       </p>
 
       <h3>5.4 Direitos do titular de dados</h3>
       <p>
-        Você tem direitos específicos com relação aos seus dados pessoais, conforme estabelecido pela LGPD, incluindo o direito de acessar, corrigir, excluir dados e revogar o consentimento. Para exercer esses direitos, entre em contato conosco conforme indicado na seção "Contato" destes Termos.
+        Você tem direitos específicos com relação aos seus dados pessoais, conforme estabelecido pela <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">LGPD</a>, incluindo o direito de acessar, corrigir, excluir dados e revogar o consentimento. Para exercer esses direitos, entre em contato conosco conforme indicado na seção "Contato" destes Termos.
       </p>
 
       <h2>6. Uso Aceitável</h2>
@@ -220,7 +220,7 @@
 
       <h2>14. Lei Aplicável</h2>
       <p>
-        Estes Termos serão regidos e interpretados de acordo com as leis do Brasil, incluindo a Lei Geral de Proteção de Dados Pessoais (LGPD) - Lei nº 13.709/2018, sem consideração aos seus princípios de conflito de leis.
+        Estes Termos serão regidos e interpretados de acordo com as leis do Brasil, incluindo a <a href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm" target="_blank">Lei Geral de Proteção de Dados Pessoais (LGPD) - Lei nº 13.709/2018</a>, sem consideração aos seus princípios de conflito de leis.
       </p>
 
       <h2>15. Alterações nos Termos</h2>
