--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/a11y-css-reset/combo.css" />
     <link rel="stylesheet" href="assets/app.css">
+    <style>
+        .contact-email {
+            font-size: 2.4rem;
+            margin: 30px 0;
+            text-align: center;
+        }
+        .contact-email a {
+            color: var(--highlight);
+            text-decoration: underline;
+            transition: all 0.3s ease;
+        }
+        .contact-email a:hover {
+            color: #ffed80;
+        }
+    </style>
 </head>
 <body>
     <header class="header">
@@ -40,7 +55,7 @@
                 <h1 class="header-cta__title">
                     Vamos criar algo extraordinário juntos
                 </h1>
-                <a class="header-cta__link" href="#contact-form" title="Eu quero entrar em contato com a nyx">
+                <a class="header-cta__link" href="#contact-section" title="Eu quero entrar em contato com a nyx">
                     EU QUERO
                 </a>
             </div>            
@@ -162,53 +177,14 @@
             </ul>
         </section>
 
-        <section id="contact-form" class="section-form">
+        <section id="contact-section" class="section-form">
             <div class="container">
                 <h2 class="section-title contact-title text-center">
-                    Conte um pouco sobre seu projeto <br /> e entramos em contato com você o mais rápido.
+                    Entre em contato conosco para falar sobre seu projeto
                 </h2>
-            <form 
-                name="contact-form" 
-                class="contact-form"
-                method="POST"
-                action="https://smartforms.dev/submit/5dc8ba32ed25000605199af8">
-                <input type="hidden" name="_language" value="pt-BR">
-                <label class="nyx-field" for="name">
-                    <span class="nyx-field__text">Seu nome</span>
-                    <input id="name" type="text" name="name" class="nyx-field__input" placeholder="Jonh Rich" required>
-                </label>
-                <label class="nyx-field" for="email">
-                    <span class="nyx-field__text">Email</span>
-                    <input id="email" type="email" name="email" class="nyx-field__input" placeholder="email@email.com" required>
-                </label>
-                <label class="nyx-field" for="phone">
-                    <div class="nyx-field__text" >Telefone</div>        
-                    <input id="phone" type="phone" name="phone" class="nyx-field__input" placeholder="+55 (11) 98335-3569" required>
-                </label>
-                <label class="nyx-field" for="project">
-                    <span class="nyx-field__text">Nome do seu projeto</span>
-                    <input id="project" type="text" name="project" class="nyx-field__input" required>
-                </label>
-                <label class="nyx-field" for="description">
-                    <span class="nyx-field__text">Explique um pouco sobre seu projeto</span>
-                    <span class="nyx-field__subtext nyx-field__subtext--blue">(Links, caso tenha arquivos grandes enviar o link)</span>
-                    <textarea id="description" name="description" class="nyx-field__textarea" rows="7" required></textarea>
-                </label>
-                <label class="nyx-field" for="schedule">
-                    <span class="nyx-field__text">Melhores dias e horarios para uma call</span>
-                    <textarea id="schedule" name="schedule" class="nyx-field__textarea" rows="7" required></textarea>
-                </label>
-                <button class="nyx-button" type="submit">
-                    <span class="nyx-button__text">ENVIAR</span>
-                    <svg class="nyx-button__right-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="18" viewBox="0 0 21 18">
-                    <g transform="translate(0 -38.25)">
-                        <g transform="translate(0 38.25)">
-                            <path d="M0,56.25l21-9-21-9v7l15,2-15,2Z" transform="translate(0 -38.25)" fill="currentColor" />
-                        </g>
-                    </g>
-                    </svg>
-                </button>
-            </form>
+                <p class="contact-email text-center">
+                    <a href="mailto:admin@nyx.tc">admin@nyx.tc</a>
+                </p>
             </div>
         </section>
     </main>
